[package]
name = "s3-bak"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
config = "0.14.0"
data-encoding = "2.6.0"
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
mime_guess = "2.0.5"
orion = "0.17.7"
qcos = "0.1.13"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ring = "0.17.5"
rsa = "0.9.6"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.128"
simplelog = "0.12.2"
threadpool = "1.8.1"
tokio = "1.40.0"
